# iso14443-rs

./: .envrc  .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yml
example/: cli_parser.rs  loopback.rs
src/: lib.rs
src/type_a/: activation.rs  anticol_select.rs  atqa.rs  ats.rs  block.rs  crc.rs  mod.rs  pcb.rs  pcd.rs  picc.rs  pps.rs  protocol.rs  rats.rs  sak.rs  vec.rs
