# SPDX-FileCopyrightText: © 2025 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
edition = "2024"
categories = ["embedded", "no-std"]
description = "ISO/IEC 14443 NFC/RFID protocol implementation"
keywords = ["nfc", "rfid", "iso14443", "no-std", "embedded"]
license = "GPL-3.0-or-later"
name = "iso14443"
repository = "https://github.com/Foundation-Devices/iso14443-rs"
rust-version = "1.88.0"
version = "0.1.0"

[features]
default = []
alloc = []
std = ["alloc"]

[dependencies]
bitflags = "2.9"
bounded-integer = { version = "0.6", features = ["num-traits02"] }
heapless = "0.9"
num_enum = { version = "0.7", default-features = false }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
hex = "0.4"

[[example]]
name = "cli_parser"
path = "example/cli_parser.rs"

[[example]]
name = "loopback"
path = "example/loopback.rs"
required-features = ["std"]
